# smol-EVM

./: Cargo.toml  README.md  structure.txt
src/: lib.rs  types.rs
src/evm/: gas.rs  memory.rs  mod.rs  opcodes.rs  stack.rs
