[package]
name = "smol-EVM"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"           # Error handling
serde = { version = "1.0", features = ["derive"] }  # Serialization
hex = "0.4"                 # Hex encoding (if not using alloy's)
alloy = "0.7.0"
alloy-primitives = { version = "1.0", default-features = false, features = ["serde"] }